# django-data-seeder

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  runtests.py  setup.py
.circleci/: config.yml
.github/: main.workflow
data_seeder/: admin.py  apps.py  base.py  generators.py
data_seeder/management/commands/: seeddata.py
data_seeder/templates/admin/data_generator/: change_list.html  generate_form.html
tests/: models.py  test_base.py  test_generators.py  test_settings.py
