[tool.poetry]
name = "django-data-seeder"
version = "0.1.0"
description = "A data seeder for models for Django"
authors = ["Kyle Bernstein <kbernst30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
